--- a/mjc-blog/content/posts/study/2024萌新联赛2.md
+++ b/mjc-blog/content/posts/study/2024萌新联赛2.md
@@ -204,7 +204,7 @@ int main() {
 高精度 根据题意可知 是同一个结果往前移 b.size() 次相加 赛时笨比没调出来 python 引入 demical 库过的
 
 赛时代码 
-```
+```python
 from decimal import *
 import sys
 t=int(input())
