--- a/mjc-blog/content/posts/study/2024HDU2.md
+++ b/mjc-blog/content/posts/study/2024HDU2.md
@@ -97,7 +97,7 @@ int main(){
 }
 ```
 
-## 鸡爪
+## 1001 鸡爪
 
 给 n 条边，任意顶点，构造数量最多的鸡爪，同时保证输出每条边的两个顶点时，保证行优先遍历，字典序最小。
 
@@ -142,7 +142,7 @@ int main() {
 }
 ```
 
-## 传奇勇士小凯
+## 1006 传奇勇士小凯
 
 
 有⼀个 n 个结点的有根树，你需要从 1 号结点走到任意⼀个叶子节点，每天你有 p[i]/15 的可能性可以向任意⼀个儿子节点走⼀步（ i 为你当前所在的节点编号），询问你期望最多可以在这颗树上走多久
@@ -199,7 +199,7 @@ int main() {
 
 ```
 
-## 绝对不模拟的简单魔方
+## 1003 绝对不模拟的简单魔方
 
 1)暴力，从初始状态开始模拟，每次对比当前状态和给出状态，若相同或不同点仅两个，即得到答案  
 2)将魔方视为 2 阶的，预处理得到 24 种可能状态，与给出状态对比，至多有一个角不同，即为答案。
@@ -208,7 +208,7 @@ int main() {
 之后补...
 ```
 
-## 在 A 里面找有 C 的 B
+## 1011 在 A 里面找有 C 的 B
 
 AC自动机（还不会，之后补....
 
