--- a/mjc-blog/content/posts/study/2024萌新联赛1.md
+++ b/mjc-blog/content/posts/study/2024萌新联赛1.md
@@ -5,7 +5,7 @@ lastmod: 2024-07-28T15:36:08+08:00 #更新时间
 author: ["KiritoXD"] #作者
 tags: 
 - "补题"
-description: "" #描述
+description: "萌新联赛补题" #描述
 weight: # 输入1可以顶置文章，用来给文章展示排序，不填就默认按时间排序
 slug: ""
 draft: false # 是否为草稿
@@ -43,7 +43,7 @@ int main(){
 
 ## H 两难抉择
 
-长度为 n 的数组 a，两种操作选一个进行一次或不操。  
+长度为 n 的数组 a，两种操作选一个进行一次或不操作。  
 
 显然将数组最大值 * n 后答案最大  
 
