--- a/mjc-blog/content/posts/study/2024萌新联赛2.md
+++ b/mjc-blog/content/posts/study/2024萌新联赛2.md
@@ -5,7 +5,7 @@ lastmod: 2024-07-25T20:50:08+08:00 #更新时间
 author: ["KiritoXD"] #作者
 tags: 
 - "补题"
-description: "" #描述
+description: "萌新联赛补题" #描述
 weight: # 输入1可以顶置文章，用来给文章展示排序，不填就默认按时间排序
 slug: ""
 draft: false # 是否为草稿
