--- a/mjc-blog/content/posts/study/最小表示法.md
+++ b/mjc-blog/content/posts/study/最小表示法.md
@@ -5,7 +5,7 @@ lastmod: 2024-07-24T21:53:28+08:00 #更新时间
 author: ["KiritoXD"] #作者
 tags: 
 - "string"
-description: "" #描述
+description: "最小表示法学习记录" #描述
 weight: # 输入1可以顶置文章，用来给文章展示排序，不填就默认按时间排序
 slug: ""
 draft: false # 是否为草稿
