--- a/mjc-blog/content/posts/study/最短路.md
+++ b/mjc-blog/content/posts/study/最短路.md
@@ -235,26 +235,26 @@ bool spfa(int n,int s){
 struct Node{
     int y,v;
     Node(int _y,int _v){y=_y;v=_v;}
-};
+};   //开一个结构体用于储存边的信息，y 代表这条边通向哪，v 代表这条边的边权
 
-int n,m,u,v,c,dist[1005],stay[1005];
-bool b[1005];
-vector<Node>edge[10005];
+int n,m,u,v,w,s,t,dist[N];
+bool vis[N];
+vector<Node>edge[N];//edge 数组的下标就是边的起始点，Node 中的 y 代表这条边通向哪个点
 
-void dijkstra(){
-    memset(b,0,sizeof(b));
-    memset(dist,127,sizeof(dist));
-    dist[1]=0;
+void dijkstra(int s,int t){//s 指代起点，t 指代终点
+    memset(vis,0,sizeof(vis));
+    memset(dist,127,sizeof(dist)); //初始将所有点的最短路都设置为无穷大 
+    dist[s]=0;//起点到自己的距离为 0
     for(;;){
-        int x=-1;
+        int x=-1;//x 是这一轮循环中找到的最短路径
         for(int i=1;i<=n;i++){
-            if(!b[i]&&dist[i]<1<<30)
-                if(x==-1||dist[i]<dist[x])x=i;
+            if(!vis[i]&&dist[i]<(1<<30))//如果当前这个点没被更新过，并且到达它的最短路不是初始化的无穷大，我们就考虑他是不是当前的最优选择
+                if(x==-1||dist[i]<dist[x])x=i;//如果 x 还未被更新，或者到这个点的最短路比之前选的更短，我们就更新 x 
         }
-        if(x==n||x==-1)break;
-        b[x]=1;
-        for(auto i:edge[x]){
-            dist[i.y]=min(dist[i.y],dist[x]+i.v+stay[i.y]);
+        if(x==t||x==-1)break;//如果 x 为终点，或遍历所有点后 x 还没更新，就终止算法
+        vis[x]=1;//标记当前这个 x 避免之后重复使用
+        for(auto i:edge[x]){//遍历以 x 这个点为起点的所有边
+            dist[i.y]=min(dist[i.y],dist[x]+i.v);//更新能到达的点的最短路
         }
     }
 }
